--- a/models.ipynb
+++ b/models.ipynb
@@ -4,22 +4,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Indeed Machine Learning Hackathon - Initial Model Building"
+    "# Indeed Machine Learning Hackathon - Model Building"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This notebook walks through the predictive models that I explored during the competition. The prediction file from the SVM model below is what I submitted to get my final ranking of 27/248."
+    "This notebook walks through the predictive models that I explored. The prediction file from the SVM model below is what I submitted to get my final ranking of 27/248. After the competition, I added in the simple feedforward neural network for comparison."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import preprocessing as pp\n",
@@ -31,12 +29,13 @@
     "from sklearn.svm import SVC\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "import matplotlib.pyplot as plt\n",
+    "import tensorflow as tf\n",
     "%matplotlib inline"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -65,9 +64,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 92,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -85,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 93,
    "metadata": {
     "collapsed": true
    },
@@ -103,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -125,7 +124,7 @@
    "cell_type": "code",
    "execution_count": 29,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -137,9 +136,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -165,9 +162,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -194,7 +189,7 @@
    "cell_type": "code",
    "execution_count": 32,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -211,9 +206,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -477,9 +470,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -503,9 +494,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -530,7 +519,7 @@
    "cell_type": "code",
    "execution_count": 36,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -564,7 +553,7 @@
    "cell_type": "code",
    "execution_count": 38,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -580,9 +569,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -846,9 +833,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -872,9 +857,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -901,14 +884,138 @@
     "lr_test_pred_str = pp.labelMatrixToString(lr_test_preds.astype(int))\n",
     "# pp.predStringToFile(lr_test_pred_str, \"./data/tags.tsv\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Feedforward Neural Network"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "batch_size = 256\n",
+    "beta = 0.001\n",
+    "n_hidden_nodes = 256\n",
+    "num_steps = 5001"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "graph = tf.Graph()\n",
+    "with graph.as_default():\n",
+    "    # Datasets\n",
+    "    tf_train_dataset = tf.placeholder(tf.float32, shape=(batch_size, X_train.shape[1]))\n",
+    "    tf_train_labels = tf.placeholder(tf.float32, shape=(batch_size, y_train.shape[1]))\n",
+    "    tf_valid_dataset = tf.constant(X_val.todense(), dtype=tf.float32)\n",
+    "\n",
+    "    # Variables.\n",
+    "    W1 = tf.Variable(tf.truncated_normal([X_train.shape[1], n_hidden_nodes]))\n",
+    "    b1 = tf.Variable(tf.zeros([n_hidden_nodes]))\n",
+    "    W2 = tf.Variable(tf.truncated_normal([n_hidden_nodes, y_train.shape[1]]))\n",
+    "    b2 = tf.Variable(tf.zeros([y_train.shape[1]]))\n",
+    "\n",
+    "    # Training computation.\n",
+    "    h1 = tf.matmul(tf_train_dataset, W1) + b1\n",
+    "    logits = tf.matmul(tf.nn.relu(h1), W2) + b2\n",
+    "    loss = tf.reduce_mean(tf.nn.sigmoid_cross_entropy_with_logits(labels=tf_train_labels, logits=logits))\n",
+    "    regularizer = tf.nn.l2_loss(W1) + tf.nn.l2_loss(W2)\n",
+    "\n",
+    "    # Optimizer.\n",
+    "    optimizer = tf.train.GradientDescentOptimizer(0.5).minimize(loss + beta*regularizer)\n",
+    "\n",
+    "    # Predictions for the training and validation data.\n",
+    "    train_prediction = tf.nn.sigmoid(logits)\n",
+    "    valid_prediction = tf.nn.sigmoid(tf.matmul(tf.nn.relu(tf.matmul(tf_valid_dataset, W1) + b1), W2) + b2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 128,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Initialized\n",
+      "Minibatch loss at step 0: 9.842046\n",
+      "Minibatch accuracy - Precision: 0.1487, Recall: 0.4940, F1: 0.2286\n",
+      "Validation accuracy - Precision: 0.1347, Recall: 0.3350, F1: 0.1921\n",
+      "Minibatch loss at step 500: 0.424202\n",
+      "Minibatch accuracy - Precision: 0.6044, Recall: 0.6700, F1: 0.6355\n",
+      "Validation accuracy - Precision: 0.4855, Recall: 0.5638, F1: 0.5217\n",
+      "Minibatch loss at step 1000: 0.201113\n",
+      "Minibatch accuracy - Precision: 0.6840, Recall: 0.7692, F1: 0.7241\n",
+      "Validation accuracy - Precision: 0.5238, Recall: 0.5966, F1: 0.5578\n",
+      "Minibatch loss at step 1500: 0.151188\n",
+      "Minibatch accuracy - Precision: 0.7397, Recall: 0.8100, F1: 0.7733\n",
+      "Validation accuracy - Precision: 0.5606, Recall: 0.6352, F1: 0.5956\n",
+      "Minibatch loss at step 2000: 0.160286\n",
+      "Minibatch accuracy - Precision: 0.7435, Recall: 0.8020, F1: 0.7717\n",
+      "Validation accuracy - Precision: 0.6177, Recall: 0.6494, F1: 0.6331\n",
+      "Minibatch loss at step 2500: 0.156762\n",
+      "Minibatch accuracy - Precision: 0.7665, Recall: 0.8325, F1: 0.7982\n",
+      "Validation accuracy - Precision: 0.6555, Recall: 0.6689, F1: 0.6621\n",
+      "Minibatch loss at step 3000: 0.161220\n",
+      "Minibatch accuracy - Precision: 0.7654, Recall: 0.8136, F1: 0.7887\n",
+      "Validation accuracy - Precision: 0.6654, Recall: 0.6699, F1: 0.6676\n",
+      "Minibatch loss at step 3500: 0.172170\n",
+      "Minibatch accuracy - Precision: 0.7321, Recall: 0.7455, F1: 0.7387\n",
+      "Validation accuracy - Precision: 0.6700, Recall: 0.6822, F1: 0.6760\n",
+      "Minibatch loss at step 4000: 0.177799\n",
+      "Minibatch accuracy - Precision: 0.7446, Recall: 0.7981, F1: 0.7704\n",
+      "Validation accuracy - Precision: 0.6714, Recall: 0.6743, F1: 0.6728\n",
+      "Minibatch loss at step 4500: 0.178946\n",
+      "Minibatch accuracy - Precision: 0.7368, Recall: 0.7586, F1: 0.7476\n",
+      "Validation accuracy - Precision: 0.6748, Recall: 0.6748, F1: 0.6748\n",
+      "Minibatch loss at step 5000: 0.182632\n",
+      "Minibatch accuracy - Precision: 0.7646, Recall: 0.7384, F1: 0.7512\n",
+      "Validation accuracy - Precision: 0.6686, Recall: 0.6797, F1: 0.6741\n"
+     ]
+    }
+   ],
+   "source": [
+    "with tf.Session(graph=graph) as session:\n",
+    "    tf.global_variables_initializer().run()\n",
+    "    print(\"Initialized\")\n",
+    "    prev_offset = 0\n",
+    "    X_train_shuff = X_train.copy()\n",
+    "    y_train_shuff = y_train.copy()\n",
+    "    for step in range(num_steps):\n",
+    "        offset = (step * batch_size) % (y_train.shape[0] - batch_size)\n",
+    "        if offset < prev_offset:\n",
+    "            order = np.arange(X_train.shape[0])\n",
+    "            X_train_shuff = X_train_shuff[order]\n",
+    "            y_train_shuff = y_train_shuff[order]\n",
+    "        prev_offset = offset\n",
+    "        batch_data = X_train_shuff[offset:(offset + batch_size), :]\n",
+    "        batch_labels = y_train_shuff[offset:(offset + batch_size), :]\n",
+    "        feed_dict = {tf_train_dataset : batch_data.todense(), tf_train_labels : batch_labels.todense()}\n",
+    "        _, l, predictions = session.run([optimizer, loss, train_prediction], feed_dict=feed_dict)\n",
+    "        if (step % 500 == 0):\n",
+    "            print(\"Minibatch loss at step %d: %f\" % (step, l))\n",
+    "            print(\"Minibatch accuracy - %s\" % pp.score(batch_labels, predictions > .3))\n",
+    "            print(\"Validation accuracy - %s\" % pp.score(y_val, valid_prediction.eval() > .3))"
+   ]
   }
  ],
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [Root]",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "Python [Root]"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
@@ -924,5 +1031,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
